<resources>
    <string name="app_name">Fun Pulsa</string>
    <string name="home">home</string>
    <string name="explore">explore</string>
    <string name="profile">profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">history</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="pin">Pin</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="pulsa">Pulsa</string>
    <string name="tagihan">Tagihan</string>
    <string name="voucher">Voucher</string>
    <string name="withdraw">Withdraw</string>
    <string name="saldo">Saldo</string>
    <string name="carousel">Carousel</string>
    <string name="info">Info</string>
    <string name="menu">Menu</string>
    <string name="promo">Promo</string>
    <string name="history_transaksi">History Transaksi</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="batal">Batal</string>
    <string name="tambah">Tambah</string>
    <string name="transfer">Transfer</string>
    <string name="beli">beli</string>
    <string name="todo">TODO</string>
    <string name="product">product</string>
    <string name="admin">Admin</string>
    <string name="subtotal">subtotal</string>
    <string name="total">total</string>
    <string name="status">status</string>
    <string name="content_description_media">content_description_media</string>
    <string name="title_activity_slide">SlideActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_is_awesome">image is awesome</string>
</resources>