<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".activity.LoginActivity">

    <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

        <TextView
                android:id="@+id/tvTitle"
                android:text="@string/login"
                android:gravity="center"
                android:textSize="52sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numberTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nomor Telephone"
                android:paddingTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginNumber"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pinTextField"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin"
                android:paddingTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginPin"
                    android:inputType="numberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/btnRegister"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/daftar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/btnLogin"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/masuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>