<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".fragment.HomeFragment">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:background="#fff"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:id="@+id/txtName"
                android:textSize="18sp"
                android:text=""
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <TextView
                android:id="@+id/txtSaldo"
                android:paddingTop="8dp"
                android:text=""
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp">

            <Button
                    android:id="@+id/btnSaldo"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/saldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <Button
                    android:id="@+id/btnWithdraw"
                    android:layout_weight="1"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:textColor="@android:color/white"
                    android:text="@string/withdraw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
                android:text="@string/menu"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:listitem="@layout/item_menu"/>
        </RelativeLayout>

        <TextView
                android:text="@string/promo"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">

            <com.synnapps.carouselview.CarouselView
                    android:id="@+id/carouselView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:fillColor="#FFFFFFFF"
                    app:pageColor="#00000000"
                    app:radius="6dp"
                    app:slideInterval="3000"
                    app:strokeColor="#FF777777"
                    app:strokeWidth="1dp" />
        </RelativeLayout>

        <TextView
                android:text="@string/info"
                android:textSize="18sp"
                android:paddingTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants">
                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:listitem="@layout/item_info"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>